[package]
name = "block-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.6"
sha2 = "0.10.8"
hex = "0.4.3"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
jammdb = "0.11.0"
rmp-serde = "1.3.0"
clap = { version = "4.5.15", features = ["derive"] }
shlex = "1.3.0"
ripemd = "0.1.3"
bs58 = "0.5.1"
secp256k1 = { version = "0.29.1", features = ["rand-std","hashes-std","serde"] }
base58 = "0.2.0"

